--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMEAC-certificate</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 </head>
 <body>
     <!-- <div class="certificate-wrapper-1"> -->
@@ -37,16 +38,16 @@
 			<div class="main-content">for successfully completing the training course as<br> prescribed by the
 				organisation</div>
             <div class="certificate-logo">
-                    <img src="D:\MMEAC\MMEAC assignments\assignment 3\logo.png" width="200mm" height="150">
+                    <img src="logo.png" width="200mm" height="150">
             </div>
-			<img class="sign-president-img" src="D:\MMEAC\MMEAC assignments\assignment 3\president.png">
+			<img class="sign-president-img" src="president.png">
 			<div class="sign-president">Signature of President</div>
 
-			<img class="sign-director-img" src="D:\MMEAC\MMEAC assignments\assignment 3\director.png">
+			<img class="sign-director-img" src="director.png">
 			<div class="sign-director">Signature of Director</div>
 	    <!-- </div> -->
           <div class="org-logo">
-            <img src="D:\MMEAC\MMEAC assignments\assignment 3\org-logo.png">
+            <img src="org-logo.png">
           </div>
           
           <div class="org-name">Maha Mission Education and Career Council</div>
